--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,7 +9,7 @@
     tools:context=".presentation.splash.SplashActivity">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/iv_logosplash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
