--- a/app/src/main/res/layout/fragment_auth_phone.xml
+++ b/app/src/main/res/layout/fragment_auth_phone.xml
@@ -23,7 +23,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="73dp"
         android:fontFamily="@font/stolzl_bold"
-        android:text="Помощник логиста"
+        android:text="@string/text_logisthelper"
         android:textColor="#2B2D35"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/iv_logo"
@@ -37,7 +37,7 @@
         android:layout_marginTop="86dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/stolzl_regular"
-        android:text="Добро пожаловать в БИА.Помощник логиста"
+        android:text="@string/welcome_title"
         android:textColor="#2B2D35"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,6 +59,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
     <com.fredporciuncula.phonemoji.PhonemojiTextInputLayout
+        android:id="@+id/pm_text_input_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -69,7 +70,7 @@
         app:boxCornerRadiusBottomStart="18dp"
         app:boxCornerRadiusTopEnd="18dp"
         app:boxCornerRadiusTopStart="18dp"
-        app:boxStrokeColor="@color/alt_dark"
+        app:boxStrokeColor="@color/dark"
         app:boxStrokeWidth="2dp"
         app:cursorColor="@color/dark"
         app:hintTextColor="@color/dark"
@@ -78,7 +79,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_description">
 
         <com.fredporciuncula.phonemoji.PhonemojiTextInputEditText
-            android:id="@+id/editTextPhone"
+            android:id="@+id/t_phone"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:digits="0123456789+"
@@ -89,5 +90,20 @@
             android:textColor="@color/dark"
             app:phonemoji_initialRegionCode="RU" />
     </com.fredporciuncula.phonemoji.PhonemojiTextInputLayout>
+
+    <Button
+        android:id="@+id/b_next"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="164dp"
+        android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/alt_black"
+        android:text="@string/next_button"
+        android:textColor="#FFFFFF"
+        app:cornerRadius="18dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pm_text_input_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
