--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="dark">#2B2D35</color>
     <color name="alt_dark">#3C4049</color>
+    <color name="gray">#EAEEF4</color>
+    <color name="middle_gray_blue">#B8C4DB</color>
+    <color name="alt_black">#2B2D35</color>
 </resources>
