--- a/app/src/main/res/layout/fragment_auth_password.xml
+++ b/app/src/main/res/layout/fragment_auth_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.auth.AuthPhoneFragment">
+    tools:context=".presentation.auth.AuthPasswordFragment">
 
     <ImageView
         android:id="@+id/iv_logo"
@@ -29,20 +29,30 @@
         app:layout_constraintStart_toEndOf="@+id/iv_logo"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageButton
+        android:id="@+id/iv_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="93dp"
+        android:src="@drawable/arrow_back"
+        android:background="@android:color/transparent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
+        app:tint="@color/dark" />
+
     <TextView
         android:id="@+id/tv_title"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="86dp"
-        android:layout_marginEnd="16dp"
         android:fontFamily="@font/stolzl_regular"
-        android:text="@string/welcome_title"
+        android:text="Введите пароль"
         android:textColor="#2B2D35"
         android:textSize="22sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_loghelp" />
+        app:layout_constraintStart_toEndOf="@+id/iv_arrow"
+        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />
 
     <TextView
         android:id="@+id/tv_description"
@@ -52,20 +62,18 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/stolzl_book"
-        android:text="@string/enter_your_number_title"
-        android:textColor="#3C4049"
+        android:text="Для получения пароля обратитесь к руководителю"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
-    <com.fredporciuncula.phonemoji.PhonemojiTextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_input_layout_pass"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
-        android:hint="@string/phone_number"
         app:boxCornerRadiusBottomEnd="18dp"
         app:boxCornerRadiusBottomStart="18dp"
         app:boxCornerRadiusTopEnd="18dp"
@@ -73,23 +81,22 @@
         app:boxStrokeColor="@color/dark"
         app:boxStrokeWidth="2dp"
         app:cursorColor="@color/dark"
-        app:hintTextColor="@color/dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_description">
 
-        <com.fredporciuncula.phonemoji.PhonemojiTextInputEditText
-            android:id="@+id/t_phone"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_password"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:digits="0123456789+"
+            android:layout_height="wrap_content"
+            android:digits="1234567890"
             android:ems="10"
             android:fontFamily="@font/stolzl_book"
-            android:inputType="phone"
-            android:maxLength="16"
-            android:textColor="@color/dark"
-            app:phonemoji_initialRegionCode="RU" />
-    </com.fredporciuncula.phonemoji.PhonemojiTextInputLayout>
+            android:inputType="number"
+            android:maxLength="6"
+            android:textColor="@color/dark" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/b_next"
@@ -103,6 +110,17 @@
         android:textColor="#FFFFFF"
         app:cornerRadius="18dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_pass" />
+
+    <TextView
+        android:id="@+id/tv_error"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/stolzl_book"
+        android:textColor="#F0303F"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_input_layout_pass" />
 
