--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="gray">#EAEEF4</color>
     <color name="middle_gray_blue">#B8C4DB</color>
     <color name="alt_black">#2B2D35</color>
+    <color name="red">#F0303F</color>
 </resources>
