Add OTP library and BottomNavigation for MainFragment

--- a/app/src/main/res/layout/fragment_auth_password.xml
+++ b/app/src/main/res/layout/fragment_auth_password.xml
@@ -35,8 +35,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="93dp"
-        android:src="@drawable/arrow_back"
         android:background="@android:color/transparent"
+        android:src="@drawable/arrow_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_logo"
         app:tint="@color/dark" />
@@ -67,7 +67,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
-    <com.google.android.material.textfield.TextInputLayout
+    <com.otpview.ItemView
         android:id="@+id/text_input_layout_pass"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -85,25 +85,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_description">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <com.otpview.OTPTextView
             android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:digits="1234567890"
-            android:ems="10"
-            android:fontFamily="@font/stolzl_book"
-            android:inputType="number"
-            android:maxLength="6"
-            android:textColor="@color/dark" />
+            android:textColor="@color/dark"
+            app:bar_active_color="@color/dark"
+            app:bar_enabled="true"
+            app:bar_height="2dp"
+            app:bar_inactive_color="@color/dark"
+            app:bar_margin_bottom="10dp"
+            app:bar_margin_left="6dp"
+            app:bar_margin_right="6dp"
+            app:box_margin="12dp"
+            app:height="45dp"
+            app:hide_otp="false"
+            app:length="6"
+            app:otp=""
+            app:otp_box_background="@color/white"
+            app:width="30dp" />
 
-    </com.google.android.material.textfield.TextInputLayout>
+    </com.otpview.ItemView>
 
     <Button
         android:id="@+id/b_next"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="164dp"
+        android:layout_marginTop="144dp"
         android:layout_marginEnd="16dp"
         android:backgroundTint="@color/alt_black"
         android:text="@string/next_button"
